--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
            <p>In Zeiten der Corona Krise tauchen immer wieder neue ungeahnte Probleme auf, die es, so gut es eben geht, zu lösen gilt. Im Moment herrscht eine Knappheit an dringend benötigten Atemschutzmasken.
 		   <br><br>Um diesen Engpass zu umgehen haben sich fleißige Damen in Mittelhessen zusammengeschlossen und nähen in feinster Handarbeit Atemschutzmasken aus bester Baumwolle.
 		   <br><br>
-		   Die Maske ist 3-lagig, waschbar (60°) und bügelbar. Diese Eigenschaften machen Sie zu einem Allrounder unter den Atemschutzmasken und ist nach Reinigung wieder benutzbar. Durc 
+		   Die Maske ist 3-lagig, waschbar (60°) und bügelbar. Diese Eigenschaften machen Sie zu einem Allrounder unter den Atemschutzmasken und ist nach Reinigung wieder benutzbar.
 		   <br><br>Schützen Sie sich und ihre Mitmenschen mit unserer Premium Atemschutzmaske "Corona Secure I"!
 			  
 			<br>Erwerben können Sie diese in unserem Webshop bei Amazon. Zur direkten Weiterleitung klicken Sie bitte<a class="extern" href="/impressum.html" target="_blank">hier</a>. 
@@ -79,9 +79,9 @@
 		<br>- bügelbar	  
 		<br>- handgenäht
 		<br>- mit Nasenbügel für sicheren Halt
-		<br>- Bandlänge ca. 60 cm, passend sogar für Dickköpfe und Dummköpfe
+		<br>- Bandlänge ca. 60 cm
 		<br>- kein Medizinprodukt
-		<br>- nur erhältlich in 5er, 10er & 100er Packs
+		<br>- nur erhältlich in 5er & 10er Packs (auf Anfrage auch in größeren Mengen verfügbar)
 		
 			  
 		<br><br>Wichtig: Es handelt sich hierbei nicht um eine zugelassene Schutzausstattung. Es besitzt daher weder eine FFP Schutzklasse noch gilt es als geeignetes Produkt im Sinne des Robert Koch Institutes.
