--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
     <div class="start1">
       <div class="container">
-        <h3><strong>CONTACT & IMPRESSUM </strong>
+        <h3><strong>Kontakt & Impressum </strong>
         <a href="https://www.youtube.com/channel/UCgeh0qHvppRrzN7MJJ1ZrXQ" target="_blank"><i class="fab fa-amazon"></i></a>
         </h3>
 
