--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
          <p>- Stoff: Baumwolle
 		<br>- 3-lagig für sicheren Schutz
 		<br>- Farben: blau, grün & rot/pink
-		<br>- Waschbar bei 60°
-		<br>- bügelbar	  
+		<br>- waschbar bei 60°
+		<br>- bügelbar bis 95°	  
 		<br>- handgenäht
 		<br>- mit Nasenbügel für sicheren Halt
-		<br>- Bandlänge ca. 60 cm
+		<br>- Bandlänge: je Band 45 cm 
 		<br>- kein Medizinprodukt
 		<br>- nur erhältlich in 5er & 10er Packs (auf Anfrage auch in größeren Mengen verfügbar)
 		
